# multi-agent-analyst

./: .env.example  .gitignore  Dockerfile  README.md  buildspec-terraform.yml  buildspec.yml  docker-compose.yml  pyproject.toml  sample_ecommerce_orders.csv
.github/workflows/: ci.yml
agents/: analyst.py  graph.py  visualizer.py  writer.py
api/: jobs.py  main.py
api/routes/: analysis.py
core/: config.py  prompts.py  sandbox.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: AgentPipeline.svelte  ReportView.svelte  UploadForm.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
infra/terraform/: backend.tf  codepipeline.tf  main.tf  oidc.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_agents.py  test_api.py
